Fix small white space.

--- a/client/www/css/mobile/main.less
+++ b/client/www/css/mobile/main.less
@@ -147,6 +147,11 @@ a:hover, a:active, a:focus, a.icon:hover, a.icon:active, a.icon:focus {
     padding-top: 48px !important;
 }
 
+.stretch.has-header {
+    padding-top: 0;
+    margin-top: -48px;
+}
+
 .main.body {
     height: 100%;
 }
@@ -160,6 +165,11 @@ a:hover, a:active, a:focus, a.icon:hover, a.icon:active, a.icon:focus {
         padding-left: 15px;
         padding-right: 15px;
     }
+}
+
+.extra.vertical.padded.container {
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 
 .b-profile.menu {
